# eventora

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
common/adapters/: result.py
common/constants/: business.py  choices.py  code.py  countries.py  params.py
common/enums/: code.py
eventora/: asgi.py  settings.py  urls.py  wsgi.py
hub/: models.py
hub/migrations/: 0001_initial.py  0002_initial.py
organizer/: models.py  urls.py  utils.py  views.py
organizer/migrations/: 0001_initial.py
organizer/serializers/: event.py  ticket.py  venue.py
organizer/services/: event.py  ticket.py  venue.py
security/migrations/: 0001_initial.py
