[project]
name = "eventora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "psycopg2-binary>=2.9.10",
]
